<resources>
    <string name="app_name">GoTaufiq</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="manu_Developer">Developer</string>
    <string name="login_desc">Silahkan login untuk memakai aplikasi</string>
    <string name="hintusername">Username</string>
    <string name="hintpassword">Password</string>
    <string name="createnewaccount">Create new account</string>
    <string name="img_logo">LOGO</string>
</resources>