<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:background="@drawable/sign_in">

        <ImageView
            android:contentDescription="@string/img_logo"
            android:id="@+id/imglogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/logotext"/>

        <TextView
            android:textAlignment="center"
            android:layout_below="@id/imglogo"
            android:id="@+id/tvsilahkan"
            android:text="@string/login_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"/>

        <EditText
            android:inputType="text"
            android:autofillHints="@string/hintusername"
            android:id="@+id/etusername"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tvsilahkan"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:drawableStart="@drawable/ic_username"
            android:hint="@string/hintusername"/>

        <EditText
            android:autofillHints="@string/hintpassword"
            android:id="@+id/etpassword"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/etusername"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/hintpassword"/>

        <Button
            android:id="@+id/btnlogin"
            android:layout_below="@id/etpassword"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_sign_in"/>

        <TextView
            android:id="@+id/tvCreateAccount"
            android:layout_below="@id/btnlogin"
            android:layout_marginTop="@dimen/fab_margin"
            android:textAlignment="center"
            android:text="@string/createnewaccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</LinearLayout>